--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,15 +1,20 @@
 # This file is the entry point to configure your own services.
 # Files in the packages/ subdirectory configure your dependencies.
 
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+# Можно добавить параметры для системы исключений, например:
+# exception_handler.http_error_codes:
+#     App\Exception\Custom\GradeException.NOT_FOUND: 404
+#     App\Exception\Custom\GradeException.INVALID_DATA: 422
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            # Опциональные биндинги для интерфейсов
+            Psr\Log\LoggerInterface: '@logger'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -19,6 +24,13 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            - '../src/Tests/'  # Исключаем тесты, если они есть
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+
+
+    # Обработчик исключений
+    App\Exception\Handler\ExceptionHandler:
+        arguments:
+            $kernelLogsDir: '%kernel.logs_dir%'
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, priority: 50 }
